--- a/src/app/table/table.component.css
+++ b/src/app/table/table.component.css
@@ -13,6 +13,10 @@
   table {
     width: 100%;
   }
+
+  tr.example-element-row:hover {
+    background: whitesmoke;
+  }
   
   .example-loading-shade {
     position: absolute;
@@ -34,10 +38,6 @@
   }
   
   /* Column Widths */
-  .mat-column-number,
-  .mat-column-state {
-    max-width: 64px;
-  }
   
   .mat-column-created {
     max-width: 124px;
