--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -3,7 +3,7 @@
          *ngIf="isLoadingResults || isRateLimitReached">
       <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
       <div class="example-rate-limit-reached" *ngIf="isRateLimitReached">
-        GitHub's API rate limit has been reached. It will be reset in one minute.
+        Data load error.
       </div>
     </div>
   
@@ -12,33 +12,35 @@
       <table mat-table [dataSource]="data" class="example-table"
              matSort matSortActive="created" matSortDisableClear matSortDirection="desc">
         <!-- Number Column -->
-        <ng-container matColumnDef="number">
-          <th mat-header-cell *matHeaderCellDef>#</th>
-          <td mat-cell *matCellDef="let row">{{row.number}}</td>
+        <ng-container matColumnDef="type">
+          <th mat-header-cell *matHeaderCellDef>Тип</th>
+          <td mat-cell *matCellDef="let row">{{row.docType}}</td>
         </ng-container>
   
         <!-- Title Column -->
         <ng-container matColumnDef="title">
-          <th mat-header-cell *matHeaderCellDef>Title</th>
-          <td mat-cell *matCellDef="let row">{{row.title}}</td>
+          <th mat-header-cell *matHeaderCellDef>Наименование</th>
+          <td mat-cell *matCellDef="let row">{{row.docName}}</td>
         </ng-container>
   
         <!-- State Column -->
-        <ng-container matColumnDef="state">
-          <th mat-header-cell *matHeaderCellDef>State</th>
-          <td mat-cell *matCellDef="let row">{{row.state}}</td>
+        <ng-container matColumnDef="address">
+          <th mat-header-cell *matHeaderCellDef>Адрес</th>
+          <td mat-cell *matCellDef="let row">{{row.address}}</td>
         </ng-container>
   
         <!-- Created Column -->
         <ng-container matColumnDef="created">
           <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>
-            Created
+            Дата создания
           </th>
-          <td mat-cell *matCellDef="let row">{{row.created_at | date}}</td>
+          <td mat-cell *matCellDef="let row">{{row.docDate | date}}</td>
         </ng-container>
   
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"
+        class="example-element-row"
+        (click)="open(row)"></tr>
       </table>
     </div>
   
