--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -9,29 +9,25 @@
   
     <div class="example-table-container">
   
-      <table mat-table [dataSource]="data" class="example-table"
-             matSort matSortActive="created" matSortDisableClear matSortDirection="desc">
-        <!-- Number Column -->
-        <ng-container matColumnDef="type">
-          <th mat-header-cell *matHeaderCellDef>Тип</th>
+      <table mat-table [dataSource]="data" matSort class="example-table">
+
+        <ng-container matColumnDef="docType">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Тип</th>
           <td mat-cell *matCellDef="let row">{{row.docType}}</td>
         </ng-container>
   
-        <!-- Title Column -->
-        <ng-container matColumnDef="title">
-          <th mat-header-cell *matHeaderCellDef>Наименование</th>
+        <ng-container matColumnDef="docName">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Наименование</th>
           <td mat-cell *matCellDef="let row">{{row.docName}}</td>
         </ng-container>
   
-        <!-- State Column -->
         <ng-container matColumnDef="address">
-          <th mat-header-cell *matHeaderCellDef>Адрес</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Адрес</th>
           <td mat-cell *matCellDef="let row">{{row.address}}</td>
         </ng-container>
   
-        <!-- Created Column -->
-        <ng-container matColumnDef="created">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>
+        <ng-container matColumnDef="docDate">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>
             Дата создания
           </th>
           <td mat-cell *matCellDef="let row">{{row.docDate | date}}</td>
