--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -13,7 +13,7 @@
 
         <ng-container matColumnDef="docType">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Тип</th>
-          <td mat-cell *matCellDef="let row">{{row.docType}}</td>
+          <td mat-cell *matCellDef="let row">{{docType[row.docType]}}</td>
         </ng-container>
   
         <ng-container matColumnDef="docName">
@@ -32,11 +32,16 @@
           </th>
           <td mat-cell *matCellDef="let row">{{row.docDate | date}}</td>
         </ng-container>
+
+        <ng-container matColumnDef="status">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Статус</th>
+          <td mat-cell *matCellDef="let row">{{docStatus[row.status]}}</td>
+        </ng-container>
   
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"
         class="example-element-row"
-        (click)="open(row)"></tr>
+        (click)="select(row)"></tr>
       </table>
     </div>
   
